[gd_scene load_steps=15 format=3 uid="uid://m8eb30m2phbv"]

[ext_resource type="Script" uid="uid://cerxyojin83ah" path="res://scripts/characters/player.gd" id="1_dgqi6"]
[ext_resource type="PackedScene" uid="uid://dcd0l1ye5i2lk" path="res://scenes/characters/missile1.tscn" id="2_smehm"]
[ext_resource type="AudioStream" uid="uid://h1gpqoa0otob" path="res://import/sound/helicopter-flying-1.wav" id="3_d2wvv"]
[ext_resource type="PackedScene" uid="uid://ccgrm5ej6g17u" path="res://import/helicopter3.glb" id="3_ur7pv"]
[ext_resource type="LightmapGIData" uid="uid://kc1ejo1fk27f" path="res://resources/lightmaps/player.lmbake" id="3_y4r1p"]
[ext_resource type="AudioStream" uid="uid://inpvgyixaxe" path="res://import/sound/hostage-onboard.wav" id="4_3v2ag"]
[ext_resource type="AudioStream" uid="uid://cuje1txuejap1" path="res://import/sound/helicopter-fall.wav" id="4_jej6c"]
[ext_resource type="Script" uid="uid://b23muv6jw0n6x" path="res://scripts/lightmap_gi.gd" id="4_y4r1p"]
[ext_resource type="Resource" uid="uid://dnag2y7ad5phm" path="res://resources/state_machines/smp_player_rotating.tres" id="5_ur7pv"]
[ext_resource type="Resource" uid="uid://bvap80v44apuu" path="res://resources/state_machines/smp_player_flying.tres" id="6_y4r1p"]
[ext_resource type="Script" uid="uid://46l00vp06dcr" path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" id="9_2l4js"]
[ext_resource type="PackedScene" uid="uid://lskm5tbedisk" path="res://utils/lego_destroyer.tscn" id="9_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bomltid3mooju" path="res://scenes/model_nodes/helicopter_model_destroyed.tscn" id="13_xhtjm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kvmko"]
size = Vector3(3.48972, 1.04744, 3.45163)

[node name="player" type="CharacterBody3D" groups=["player"]]
collision_mask = 58
script = ExtResource("1_dgqi6")
lego_destroyer_np = NodePath("LegoDestroyer")
time_to_rotate = 0.2
speed = 15.0
rotation_duration = 0.5
shell1_scene = ExtResource("2_smehm")

[node name="Sounds" type="Node" parent="."]

[node name="RotorSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("3_d2wvv")
volume_db = -15.0
bus = &"Effects"

[node name="FallingSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_jej6c")
volume_db = -15.0
bus = &"Effects"

[node name="OnbardHostageSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("4_3v2ag")
bus = &"Effects"

[node name="LightmapGI" type="LightmapGI" parent="." groups=["lightmaps"]]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.455528, 0)
light_data = ExtResource("3_y4r1p")
script = ExtResource("4_y4r1p")

[node name="NewHeliColisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.182, 0.532, -0.036)
shape = SubResource("BoxShape3D_kvmko")

[node name="ModelRotator" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="HelicopterModel" parent="ModelRotator" instance=ExtResource("3_ur7pv")]
unique_name_in_owner = true

[node name="MissileOrig" type="Marker3D" parent="ModelRotator/HelicopterModel"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.84706, 0.140575, 0)

[node name="RotatingSMP" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_2l4js")
state_machine = ExtResource("5_ur7pv")
metadata/_custom_type_script = "uid://46l00vp06dcr"

[node name="FlyingSMP" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_2l4js")
state_machine = ExtResource("6_y4r1p")

[node name="FireRateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="LegoDestroyer" parent="." instance=ExtResource("9_ur7pv")]
destroy_model = ExtResource("13_xhtjm")
initial_model_np = NodePath("../ModelRotator/HelicopterModel")
explode_intensity = 8.0

[connection signal="destroy" from="." to="." method="_on_destroy"]
[connection signal="transited" from="RotatingSMP" to="." method="_on_rotating_smp_transited"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="destroy_begin" from="LegoDestroyer" to="." method="_on_lego_destroyer_destroy_begin"]
[connection signal="destroy_end" from="LegoDestroyer" to="." method="_on_lego_destroyer_destroy_end"]
